- Dynamically load fonts from conf/fonts - Include Jetbrains Mono font